--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Order summary card</title>
 
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -13,17 +15,26 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { position: absolute; top: 0; font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      position: absolute;
+      top: 0;
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
 
   <main>
-    <div class="card" style="width: 18rem;">
+    <div class="card" id="summary-card">
       <img src="images/illustration-hero.svg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Order Summary</h5>
+        <h1 class="card-title">Order Summary</h1>
         <p class="card-text">You can now listen to millions of songs, audiobooks, and podcasts on any
           device anywhere you like!</p>
         <div class="plan-summary">
@@ -39,10 +50,11 @@
       </div>
     </div>
   </main>
-  
+
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Koala5617">Koala5617</a>.
   </footer>
 </body>
+
 </html>
