--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             <p>Annual Plan</p>
             <p>$59.99/year</p>
           </div>
-          <a href="">Change</a>
+          <a href="#">Change</a>
         </div>
-        <a href="#" class="btn btn-primar d-block">Proceed to Payment</a>
-        <a href="#" class="m-auto">Cancel Order</a>
+        <a href="#" class="btn btn-primar d-block proceed">Proceed to Payment</a>
+        <a href="#" class="m-auto cancel">Cancel Order</a>
       </div>
     </div>
   </main>
